# evaluation_pipeline

./: .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-airflow.txt  requirements.txt
.omc/: project-memory.json
.omc/state/: agent-replay-8cccc95e-b9de-40db-a203-8c24e4c178c6.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-25T15-13-24-767Z.json  checkpoint-2026-03-26T11-29-59-840Z.json
configs/: default_metrics.yaml  evaluation_config.yaml  ragas_prompts.yaml
dags/: __init__.py  rag_evaluation_dag.py
scripts/: run_evaluation.py
sql/: init_evaluation_db.sql
src/: __init__.py  config.py  database.py
src/api/: __init__.py  chatbot.py  qdrant.py
src/dataset/: __init__.py  converter.py  loader.py  sampler.py
src/evaluation/: __init__.py  dialogue_eval.py  error_analyzer.py  generation_eval.py  intent_eval.py  retrieval_eval.py
src/metrics/: __init__.py  generation.py  ragas.py  retrieval.py  statistics.py
src/reporting/: __init__.py  delta_reporter.py  html_generator.py  json_reporter.py
tests/: README.md  __init__.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_blackbox_eval.py  test_dialogue_eval.py  test_generation_metrics.py  test_retrieval_metrics.py  test_statistics.py
