[project]
name = "rag-evaluation-pipeline"
version = "0.1.0"
description = "RAG Chatbot evaluation pipeline for finetuning comparison"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
